--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
 
+    def fragment_version = "1.3.0-alpha06"
+
+
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    
     implementation 'com.google.code.gson:gson:2.8.5'
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
